--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">pstudy</string>
-    <string name="title_activity_cursos">cursos_activity</string>
+    <string name="app_name">PStudy</string>
+    <string name="title_activity_cursos">PStudy</string>
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
